--- a/_posts/2012-12-20-soa_udi.md
+++ b/_posts/2012-12-20-soa_udi.md
@@ -7,6 +7,6 @@ tags:
 
 Software development is hard, distributed design is hard, teaching is hard. [Udi Dahan](http://www.udidahan.com/) makes it all seem easy. Breaking complexity into simplicity is his super power. 
 
-I took his [5 day Advanced Distributed Systems Design using SOA & DDD](http://www.udidahan.com/training/) in 2012 and it was a revelation. I'm embarrassed to admit, despite having read most of the material in the course previously in various blogs and articles during the past decade, the course was a surprise. The various concepts I'd read previously and understood vaguely suddenly started sliding into place. The [course material](http://www.udidahan.com/training/#Advanced_Distributed_System_Design) is dense and language agnostic. Udi goes through it all in quite a bit of detail while keeping the class interaction alive, it was a good mix of lecturing and Q&A. 
+I took his [5 day Advanced Distributed Systems Design using SOA & DDD](http://www.udidahan.com/training/) in 2012 and it was a revelation. I'm embarrassed to admit, despite having read most of the material in the course previously in various blogs and articles during the past decade, the course was a surprise. The various concepts I'd read previously and understood vaguely, suddenly started sliding into place. The [course material](http://www.udidahan.com/training/#Advanced_Distributed_System_Design) is dense and language agnostic. Udi goes through it all in quite a bit of detail while keeping the class interaction alive, it was a good mix of lecturing and Q&A. 
 
-If you're serious about distributed system design this course is highly recommended. I'll write more about the concepts discussed during the course in this blog.
+If you're serious about distributed system design, this course is highly recommended. I'll write more about the concepts discussed during the course in this blog.
